--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 body {
   background: url("./SFV.png");
   background-size: cover;
-  box-sizing: border-box;
+  box-sizing: content-box;
   overflow: hidden;
   margin: 0;
   padding: 0;
@@ -48,8 +48,8 @@ th {
 td {
   background: lightgrey;
   opacity: 0.9;
-  width: calc(750px / 7);
-  height: calc(500px / 5);
+  width: 100px;
+  height: 100px;
   border: 1px double black;
   border-radius: 10px 10px;
 }
