--- a/style.css
+++ b/style.css
@@ -1,33 +1,45 @@
-@import url('https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Wallpoet&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
-body {
-  background: url("./SFV.png");
-  background-size: cover;
-  box-sizing: content-box;
+@import url("https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Wallpoet&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap");
+
+* {
+  text-align: center;
+  font-size: 1rem;
+  font-weight: bold;
+  box-sizing: border-box;
   overflow: hidden;
   margin: 0;
   padding: 0;
-  text-align: center;
-  font-family: "Courier New", "Courier", "monospace";
-  font-size: 1.5rem;
-  font-weight: bold;
-  opacity: 0.8;
 }
 
 .header {
-  font-family: 'Wallpoet', 'cursive';
+  font-family: "Wallpoet", "cursive";
   width: 100%;
-  background-color: skyblue;
-  color: wheat;
   padding: 20px 0;
+  /* box-shadow: 2px 0px 10px black; */
   font-size: 5.5rem;
-  text-shadow: 2px 2px 5px grey;
-  box-shadow: 2px 0px 10px black;
+  color: darkred;
+  text-shadow: -5px 0 gold, 0 5px gold, 5px 0 gold, 0 -5px gold;
 }
 
+.main {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+.main > a {
+  display: inline-block;
+  align-self: baseline;
+  flex-basis: 20%;
+  height: 75vh;
+  color: darkred;
+  text-shadow: -5px 0 gold, 0 5px gold, 5px 0 gold, 0 -5px gold;
+  margin: 0 2rem;
+  text-decoration: none;
+  font-size: 2.5rem;
+}
 table {
-  font-family: 'Share Tech Mono', 'monospace';
+  font-family: "Share Tech Mono", "monospace";
   background-image: linear-gradient(
     to right,
     rgb(247, 65, 73),
@@ -42,7 +54,7 @@ table {
 
 th {
   padding-bottom: 20px;
-  font-size: 2rem;
+  font-size: 3rem;
 }
 
 td {
@@ -50,6 +62,7 @@ td {
   opacity: 0.9;
   width: 100px;
   height: 100px;
+  font-size: 1.5rem;
   border: 1px double black;
   border-radius: 10px 10px;
 }
@@ -86,19 +99,17 @@ td:hover {
   opacity: 0;
 }
 
-a {
+.footer>a {
+  display: block;
   text-decoration: none;
-  font-size: 2.5rem;
-}
-
-.footer {
-  font-family: 'ZCOOL QingKe HuangYou', 'cursive';
   width: 100%;
+  height: 5%;
+  bottom: 0px;
   position: fixed;
   opacity: 0.8;
-  bottom: 0px;
   background-color: black;
-  color: white;
-  padding: 10px;
+  font-family: "ZCOOL QingKe HuangYou", "cursive";
   font-size: 1.5rem;
+  color: white;
+  padding: 8px;
 }
